<resources>
    <string name="app_name">AI Image Converter</string>
    <string name="header">Header</string>
    <string name="logo">Logo</string>
    <string name="select_photo">Select Photo</string>
    <string name="select_photo_and_convert">Select Photo and Convert</string>
    <string name="go">Go</string>
    <string name="my_photos">My Photos</string>
    <string name="convert_photo">Convert Photo</string>
    <string name="pdf">PDF</string>
    <string name="png">PNG</string>
    <string name="jpg">JPG</string>
    <string name="jpeg">jpeg</string>
    <string name="webp">WEBP</string>
    <string name="svg">SVG</string>
    <string name="gif">GIF</string>
    <string name="jp2">JP2</string>
    <string name="select_compression_level">Compression Level</string>
    <string name="convert_image">Convert Image</string>
    <string name="page_size">Page Size:</string>

    <string name="default_page_size">A4</string>
    <string name="select_pdf_page_size">Select PDF Page Size : </string>
    <string name="saved_done">Saved Done</string>
    <string name="folder">Folder</string>
    <string name="share">Share</string>
    <string name="saved_successfully">Saved Successfully</string>
    <string name="image">Image</string>
    <string name="convert_images_to_pdf">Convert Images to Pdf</string>
    <string name="convert_to_pdf">Convert to PDF</string>
    <string-array name="page_sizes">
        <item>Free Size</item>
        <item>A0</item>
        <item>A1</item>
        <item>A2</item>
        <item>A3</item>
        <item>A4</item>
        <item>A5</item>
        <item>A6</item>
        <item>A7</item>
        <item>A8</item>
        <item>A9</item>
        <item>A10</item>

        <item>B0</item>
        <item>B1</item>
        <item>B2</item>
        <item>B3</item>
        <item>B4</item>
        <item>B5</item>
        <item>B6</item>
        <item>B7</item>
        <item>B8</item>
        <item>B9</item>
        <item>B10</item>

        <item>LETTER</item>
        <item>NOTE</item>
        <item>LEGAL</item>
        <item>TABLOID</item>
        <item>EXECUTIVE</item>
        <item>POSTCARD</item>

        <item>ARCH_E</item>
        <item>ARCH_D</item>
        <item>ARCH_C</item>
        <item>ARCH_B</item>
        <item>ARCH_A</item>

        <item>FLSA</item>
        <item>FLSE</item>
        <item>HALFLETTER</item>
        <item>_11X17</item>

        <item>ID_1</item>
        <item>ID_2</item>
        <item>ID_3</item>

        <item>LEDGER</item>
        <item>CROWN_QUARTO</item>
        <item>LARGE_CROWN_QUARTO</item>
        <item>DEMY_QUARTO</item>
        <item>ROYAL_QUARTO</item>
        <item>CROWN_OCTAVO</item>
        <item>LARGE_CROWN_OCTAVO</item>
        <item>DEMY_OCTAVO</item>
        <item>ROYAL_OCTAVO</item>
        <item>SMALL_PAPERBACK</item>
        <item>PENGUIN_SMALL_PAPERBACK</item>
        <item>PENGUIN_LARGE_PAPERBACK</item>

        <!-- Add more page size options here as needed -->
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start">Start</string>
    <string name="select_images_and_continue">Select Images and Continue</string>
    <string name="ai_image_converter">AI Image Converter</string>
    <string name="more">more</string>
    <string name="my_files">My Files</string>
    <string name="edit_image">Edit Image</string>
    <string name="add_image">Add Image</string>
    <string name="images_not_found_please_add_images">Images Not Found! Please Add Images</string>
    <string name="enter_file_name">Enter File Name</string>
    <string name="select_format">Select Format</string>
    <string name="select_page_size">Select Page Size</string>
    <string name="jpeg_">JPEG</string>
    <string name="select_size">Select Size</string>
    <string name="custom_size">Custom Size (pixels)</string>
    <string name="width">Width</string>
    <string name="x">X</string>
    <string name="height">Height</string>
    <string name="original">Original</string>
    <string name="_512_x_512">512 x 512</string>
    <string name="_640_x_480_vga">640 x 480 (VGA)</string>
    <string name="_800_x_600_svga">800 x 600 (SVGA)</string>
    <string name="_1024_x_768_xga">1024 x 768 (XGA)</string>
    <string name="_1280_x_720_720p_hd">1280 x 720 (720p HD)</string>
    <string name="_1280_x_960_sxga">1280 x 960 (SXGA)</string>
    <string name="_1280_x_1024_sxga">1280 x 1024 (SXGA+)</string>
    <string name="_1366_x_768_wxga">1366 x 768 (WXGA)</string>
    <string name="_1600_x_900_hd">1600 x 900 (HD+)</string>
    <string name="_1920_x_1080_1080p_full_hd">1920 x 1080 (1080p Full HD)</string>
    <string name="_2560_x_1440_1440p_qhd">2560 x 1440 (1440p QHD)</string>
    <string name="_3840_x_2160_2160p_4k_ultra_hd">3840 x 2160 (2160p 4K Ultra HD)</string>
    <string name="_7680_x_4320_4320p_8k_ultra_hd">7680 x 4320 (4320p 8K Ultra HD)</string>
    <string name="converted_image">Converted Image</string>
    <string name="saved_path_storage_documents_ai_image_converter">Saved Path:- Internal storage/Documents/AI-Image-Converter</string>
    <string name="_16_x_16_favicon">16 x 16 (Favicon)</string>
    <string name="_32_x_32_standard_favicon">32 x 32 (Standard Favicon)</string>
    <string name="_48_x_48">48 x 48</string>
    <string name="_50_x_50">50 x 50</string>
    <string name="_100_x_100">100 x 100</string>
    <string name="_150_x_300">150 x 300</string>
    <string name="_120_x_120">120 x 120</string>
    <string name="_200_x_200">200 x 200</string>
    <string name="_300_x_240">300 x 240</string>
    <string name="_300_x_300">300 x 300</string>
</resources>