<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/white"
    android:orientation="vertical"
    android:layout_marginTop="@dimen/_5sdp"
    android:padding="10dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <RadioGroup
            android:id="@+id/popupRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp">


            <RadioButton
                android:id="@+id/pdfRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pdf" />

            <RadioButton
                android:id="@+id/pngRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/png" />

            <RadioButton
                android:id="@+id/jpegRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jpeg_" />

            <RadioButton
                android:id="@+id/jpgRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jpg" />

            <RadioButton
                android:id="@+id/webpRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/webp" />

        </RadioGroup>
    </ScrollView>

</LinearLayout>
