<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearLayout3"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/primary_data"
    android:orientation="horizontal"
    android:padding="18dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <TextView
        android:id="@+id/headerText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_weight="1"
        android:fontFamily="cursive"
        android:text="@string/ai_image_converter"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/addMoreImage"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_gravity="center"
        android:layout_marginEnd="10dp"
        android:layout_weight="0"
        android:clickable="true"
        android:contentDescription="@string/add_image"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:src="@drawable/baseline_add_photo_alternate_24"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/deleteAllImages"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_gravity="center"
        android:layout_weight="0"
        android:clickable="true"
        android:contentDescription="@string/add_image"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:src="@drawable/baseline_delete_forever_24"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/headerIcon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="end"
        android:layout_weight="0"
        android:clickable="true"
        android:contentDescription="@string/more"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:src="@drawable/baseline_more_vert_24" />
</LinearLayout>