<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="36dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:contentDescription="@string/header"
        android:src="@drawable/header__"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/selectPhoto"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="#f1f1f1"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/select_photo"
            android:src="@drawable/baseline_add_to_photos_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_photo_and_convert"
            android:textColor="#2960EC"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:contentDescription="@string/go"
            android:src="@drawable/baseline_arrow_forward_2" />
    </LinearLayout>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider1"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectPhoto" />


    <LinearLayout
        android:id="@+id/imagesToPdf"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="15dp"
        android:background="#f1f1f1"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider1">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/select_photo"
            android:src="@drawable/baseline_image_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/convert_images_to_pdf"
            android:textColor="#EC2929"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="50dp"
            android:contentDescription="@string/go"
            android:src="@drawable/baseline_arrow_forward_24" />
    </LinearLayout>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagesToPdf" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/mainAdView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        ads:adSize="LEADERBOARD"
        ads:adUnitId="ca-app-pub-3516566345027334/1302220566"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/secondAdView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        ads:adSize="LEADERBOARD"
        ads:adUnitId="ca-app-pub-3516566345027334/2743294744"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainAdView" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/thirdAdView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        ads:adSize="FULL_BANNER"
        ads:adUnitId="ca-app-pub-3516566345027334/8924138836"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/secondAdView" />

</androidx.constraintlayout.widget.ConstraintLayout>